A.F....... [ZBX-5074] redesign configuration of action (Eduard)
..F....... [ZBX-1357] updated Brazilian Portuguese, French, Japanese, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-1019] updated jQuery to 1.7.2 and jQuery UI to 1.8.20 (Vedmak)
..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)

Bug fixes:
..F....... [ZBX-5159] fixed macro resolving in trigger description (Vedmak)
..F....... [ZBX-5144] fixed PostgreSQL injection in the database configuration setup form (Pavels)
A......... [ZBX-5232] fixed import of templated low level discoveries (Pavels)
A......... [ZBX-5232] fixed errors when importing empty low level discoveries and items without applications (Pavels)
A.F....... [ZBX-4007] fixed using screen elements with resources from child nodes (Pavels)
A.F....... [ZBX-4007] fixed not being able to add screens from a child node to a slideshow (Pavels)
..F....... [ZBX-4007] fixed undefined index when switching nodes in the screen selection pop up (Pavels)
A......... [ZBX-4007] fixed node criteria being applied when passing the  "screenitemids" parameter to screen.get (Pavels)
A......... [ZBX-4007] fixed hostgroup.get returning the "graphid" property (Pavels)
..F....... [ZBX-5108] fixed permission check errors caused by empty user groups (Pavels)
A......... [ZBX-5208] fixed updating interfaces via host.massupdate (Pavels)
A......... [ZBX-5208] fixed main interface validation in hostinterface.massremove (Pavels)
A......... [ZBX-5208] fixed host.update only accepting arrays of interfaces and not working with a single interface (Pavels)
..F....... [ZBX-5237] fixed event CSV export (Pavels)
..F....... [ZBX-5179] fixed filter layout on low resolution screens (Pavels)
..F....... [ZBX-3853] changed several message strings (Pavels)
A......... [ZBX-5213] fixed usergroup.massupdate failing when updating only permissions or users (Pavels)